objects/wellsforgoChildObj__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>wellsforgoParentObj</label>
        <referenceTo>wellsforgoParentObj__c</referenceTo>
        <relationshipLabel>wellsforgoChildObjs</relationshipLabel>
        <relationshipName>wellsforgoChildObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>userLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>wellsforgoChildObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>wellsforgoChildObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>wellsforgoChildObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>wellsforgoChildObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>